--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "sqlite": "^5.1.1"
   }
 }
