--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "setup-local-db": "node src/utils/setup-local-sqlite-db.js",
+    "clean-local-db": "node src/utils/clean-local-sqlite-db.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,6 @@
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "express": "^4.21.2",
-    "sqlite": "^5.1.1"
+    "sqlite3": "^5.1.7"
   }
 }
