--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
