--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^7.3.3",
     "express": "^4.21.2",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "ws": "^8.18.1"
   }
 }
