--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "@dotenvx/dotenvx": "^1.39.1",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "ws": "^8.18.1"
