--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "react-native-dotenv": "^3.4.11"
+    "@types/react": "^19.1.3",
+    "@types/react-native": "^0.72.8",
+    "react-native-dotenv": "^3.4.11",
+    "typescript": "^5.8.3"
   },
   "private": true
 }
